removed padding to fix oval shapes on iOS

--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ button {
 	height: 17px;
 	width: 17px;
 	margin: 5px 2px 5px 2px;
+	padding: 0;
 	border-radius: 50%;
 }
 
